--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
             "run_at": "document_end"
         }
     ],
-    "permissions":["storage", "tabs", "contextMenus"],
+    "permissions":["storage", "contextMenus"],
     "web_accessible_resources": [
         {
             "resources":["content.css"],
@@ -32,5 +32,6 @@
             "resources":["/icons/*"],
             "matches": ["https://*/*", "http://*/*"]
         }
-    ]
+    ],
+    "options_page": "options.html"
 }
